--- a/Redis-standalone/config/cluster.json.mustache
+++ b/Redis-standalone/config/cluster.json.mustache
@@ -7,7 +7,7 @@
         "container": {
             "type": "kvm",
             "zone": "pek3a",
-            "image": "img-pzxfqayi"
+            "image": "img-0v2wf0x3"
         },
         "instance_class": {{cluster.node.instance_class}},
         "count": {{cluster.node.count}},
